--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/netlify": "^5.2.0",
     "@astrojs/node": "^7.0.4",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^6.1.4",
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@neondatabase/serverless": "^0.6.1",
     "@prisma/adapter-neon": "^5.8.0",
@@ -32,8 +32,8 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "ws": "^8.16.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
